--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -242,11 +242,11 @@
 
 <p>Uvař půl libry rejže ve smetaně a nech ji vystydnout, pak vraz. do ní 6 žloutků, dobře to utři a trochu osol. Rozkrájej drobně půl libry vařené uzeniny, a máš-li čerstvé hříbky, tedy je nech na másle dusit, pak je k tomu přimíchej a přidej trochu květu; nejsou-li čerstvé hříbky, tedy sušené ovař v hovězí polívce, pak je usekej a přimíchej k uzenině. Nyní vymaž kuthánek máslem, dej do něj vrstvu rejže, pak vrstvu uzeniny, na to zase rejži a zase uzeninu, a tak pokračuj, až jest všecko pohromadě; potom to nech hodinu zlehounka pect.</p>
 
-<a name="rejze-s-jablkami"><a name="rejze-s-jablkami"><h2>Rejže s jablkami</h2></a></a>
+<a name="rejze-s-jablkami"><h2>Rejže s jablkami</h2></a>
 
 <p>Pro 6 i 8 osob uvař ve sladké smetaně do měkká čtvrt libry dobře vypařené rejže, dej však pozor, aby se nerozmíchala; utři dva loty nového másla, a když rejže trochu vychladla, dej ji do něho, vraz do toho 5 žloutků, každý dobře zamíchej, trochu to osol, dej k tomu trochu květu a konečně sníh z těch pěti bílků; nyní vymaž máslem melounovou formu, vysyp ji žemličkovou kůrkou, dej do ní třetí díl té kaše, na tuto vymačkej žemlové jelito, pak dej druhý díl rejže, zase na ni.vymačkej jelito, a navrch dej opět rejži; načež to nech tři čtvrtě hodiny v páře vařit, pak to postav i s vodou na čtvrt hodiny, do trouby a nech to povrchu do žlutá ztuhnout; potom to vyklop a dej na tabuli. Je-li u tabule více pánů nežli paniček, přijde to lépe k chuti než jakékoli sladké jídlo.</p>
 
-<a name="rejze-s-jablkami"><a name="rejze-s-jablkami"><h2>Rejže s jablkami</h2></a></a>
+<a name="rejze-s-jablkami-ii"><h2>Rejže s jablkami II</h2></a>
 
 <p>Uvař ze čtyr lotů dobře vyprané rejže hustou kaši a nech ji vychladnout; utři ve smetaně 4 loty čerstvého másla, dej do něho tu vychladlou kaši, vraz do toho 4 žloutky, přidej k tomu 4 loty tlučeného cukru, dobře to utři, vmíchej do toho ze třech bílku tuhý sníh, na lístky rozkrájená míšeňská jablka, dva loty velkých hrozinek bez jadýrek, trochu to osol, vymaž formu, vy-. syp ji ‚žemličkovou kůrou, vylož ji hrozinkama bez jadýrek, dej to do ní a nech to hodinu v páře vařit; pak to vyklop a dej to na tabuli.</p>
 
