--- a/src/nakypy.html
+++ b/src/nakypy.html
@@ -264,7 +264,7 @@
 
 <p>Utři čtvrt libry nového másla, dej do něho čtvrt libry tlučeného prosátého cukru a 10 lotů pěkné mouky, pak tuhý sníh z jednoho bílku, a dobře to utři; potom dej na vál asi dva loty mouky, vyválej v ní těsto a rozválej ho asi na dvě stébla tlustě pak z něho formičkou vypíchej věnečky, dávej je na máslem pomazaný papír pomaž je vejcem, posyp strouhanými mandlemi, smíchanými s cukrem, a nech je spěšně do zlatova upéct; potom navlaž vespod papír ve studené vodě namočenou houbou, aby se od papíru lehčeji odlouply, a nech je na vlažném místě tak jako španělské větry, pak je vysoko jako kopec na mísu narovnej a polej hustým šodó. – Tyto věnečky mohou se i kolik dní napřed udělat, a pak, než se dají na tabuli, postaví se asi na hodinu na teplé místo.</p>
 
-<a name="66.omeletky-se-sodo"><h2>66.Omeletky se šodó</h2></a>
+<a name="omeletky-se-sodo"><h2>Omeletky se šodó</h2></a>
 
 <p>Udělej ze zešti bílků sníh a ty žloutky do něj pomalu vmíchej; pak dej na pánev rozpálit kousek másla a vlej do něho této pěny tolik, co by se udělala placka jako dno od talíře; když je takto několik placek vysmaženo, tedy dej vždy jednu na mísu, posyp ji hodně cukrem, pomaž zařeninkou, na to polož druhou placku, a tak pokračuj, až jsou všecky; pak to všecko povrchu i okolo pomaž tou pěnou a postav to do vlažné trouby. Když to chceš dát na stůl, polej okolo šodó, a ostatní šodó dej do šálečku.</p>
 
