--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -118,7 +118,7 @@
 
 <p><b><i>NB.</i></b> Tato polívka, když jest zakloktaná, nesmí se již vařit, nanejvýš nechá se ještě přejít jeden var, přičemž se ale ustavičně míchat musí. Pro domácnost a v čase, když jsou vejce drahé, může se dáti žloutků jen polovička, a kdo tuto polívku nemá rád přihoustlou, může mouku docela vynechat.</p>
 
-<a name="27.polivka-se-zemcaty"><h2>27.Polívka se zemčaty</h2></a>
+<a name="polivka-se-zemcaty"><h2>Polívka se zemčaty</h2></a>
 
 <p>Uvař ne příliš do měkká malá zemčátka, oloupej a rozkrájej je na lístky, pak jich dej vrstvu na hluboký talíř, posyp je usekanou uzeninou, na to dej opět vrstvu zemčátek, pak opět uzeninu, a tak pokračuj, až je všecko vyrovnáno; navrch musejí přijití zemčátka; nyní to polej několika lžícemi dobré tučné hovězí polívky, postav talíř na třínožku do trouby a nech to povrchu do zlatová opéct. Několik ovařených zemčátek oloupej a ustrouhej, dej je do procezené hovězí polívky, přidej k tomu trochu drobně usekané zelené petruželky a nech to chvíli vařit; potom vlej polívku do mísy, a talíř s těmi opečenými zemčátky dej na stůl zvlášť, aby si mohl každý dle libosti posloužit.</p>
 
