--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -44,7 +44,7 @@
 
 <p>Šnečí ocásky se dají na máslo s drobně rozkrájenou cibulkou opect, a když cibulka začíná červenat, dají se na talíř nebo na mísu, která se kolem okrášlí smaženou strouhanou žemličkou.</p>
 
-<a name="musle-lastury-s-vinem"><h2>Mušle (lastury) s vínem</h2></a>
+<a name="musle-s-vinem"><h2>Mušle s vínem</h2></a>
 
 <p>Mušle nejdříve nožem čistě oškrab, pak je v několika vodách dobře omej, načež dej na rendlík kus nového másla, půl skrájené cibule a stroužek česneku, urovnej mušle na to, podlej pod ně trochu vína, přikrej je a nech je dusit až se počnou otvírat; potom je vyndej, každou nožíkem pozorně rozevři, prázdní skořápky odhoď a ty s múšlema urovnej na mísu. Mohou se dát na stůl jen tak, a k nim na půlky nebo na čtvrtky nakrájený citron, aby si každý dle libosti zacedil; nebo je dej otevřené ještě na rendlík, podlej více vína, dej k nim trochu strouhané smažené žemličky, citronové kůry, trochu květu, zaceď je citronovou šťávou a nes je na stůl.</p>
 
