--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -90,7 +90,7 @@
 
 <p>Nech 3 žejdlíky piva hezkou chvilku vařit a pěnu s něho pořád sbírej; pak vraz do hrnečku 5 nebo 6 žloutků, dej k nim kus másla, asi tři vařečky mouky, trochu smetany, trochu květu, cukr a trochu soli, dobře to s tou smekanou rozkloktej, načež tím zakloktej to vařící pivo a nech to ještě trochu vařit; musíš tím ale pořád míchat, aby se to nesrazilo; chceš-li polívku mít nakyslou, nalej do ní trochu vinního octa; potom nakrájej na kostky chlebíček, dej ho na mísu a polívku vlej na něj.</p>
 
-<a name="pivni-polivka-s-chlebem-tak-nazvana-gramatyka"><h2>Pivní polívka s chlebem (tak nazvaná gramatyka)</h2></a>
+<a name="pivni-polivka-s-chlebem"><h2>Pivní polívka s chlebem</h2></a>
 
 <p>Rozkrájej chleba do hrnku, aby ho bylo něco přes polovic, pak na něj nalej studeného piva, přidej trochu kmínu, osol to a nech to vařit, až se chléb rozvaří; do jiného hrnku vraz 3 celé vejce, dej k nim 3 loty másla, 2 loty cukru a půl žejdlíka husté kyselé smetany, dobře to rozmíchej, pak to Vlej do polívky, nech ji při ustavičném míchání ještě chvilenku povařit – a polívka jest hotová. Kdo ji chce míti přikyslou, může do ní přimíchat několik lžic vinního octa a přidat cukru. – Takto se může tak* dělat polívka z vody místo z piva, jen že se místo kyselé smetany vezme sladká a cukr se vynechá; pak se jmenuje žebrácká polívka.</p>
 
