--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -34,7 +34,7 @@
 
 <p>Utři na misce čtyry loty čerstvého másla, děj do něho z celé telecí hlavy přemytý a ode všech kůžiček očistění usekaný mozek, vraz k tomu tři celé vejce, osol to, přidej trochu usekané zeleně petružele a pažitky, smíchej vše dohromady, posléz do toho vmíchej osm lžic strouhané žemličky a nech to chvilku stát, potom z toho peč na dolečníku malé svitečky. Důlky dolečníku musejí se na každý svíteček dobře máslem vymazat. Svitečků těchto může se použit ku každé zelenině.</p>
 
-<a name="mozeckem-nadivane-zemlicky-pofezky"><h2>Mozečkem nadívané žemličky (pofézky)</h2></a>
+<a name="mozeckem-nadivane-zemlicky"><h2>Mozečkem nadívané žemličky</h2></a>
 
 <p>Nech asi dva loty másla s drobně nakrájenou cibulí na rendlíčku spěnit, vlož ‚do toho dobře očištěný mozek, osol to, dej k tomu trochu tlučeného pepře, trochu usekané zelené petružele, vraz do toho dvě celé vejce a všecko dobře promíchej; když to trochu ztuhne, odstav to a nech vychladnout. Nakrájej ostrouhané žemličky na tenké lístky, polej je trochu mlékem, hned ho ale opět slej, sice by se rozpadly, potom pomaž vždy jeden lístek tím mozkem, druhý lístek na to přimáčkni, omoč to v rozkloktaném vejci, obal ve strouhané žemličce a usmaž v rozpáleném propouštěném másle.</p>
 
