--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Zadělávaná zvěřina</h1></a>
 
-<a name="cerna-zverina-divoky-kanec"><h2>Černá zvěřina (divoký kanec)</h2></a>
+<a name="cerna-zverina"><h2>Černá zvěřina</h2></a>
 
 <p>Když jest černá zvěřina dobře opálena, tedy ji čistě omej, vlož ji do hrnce, nalej na ni tři díly vody, jeden díl vinního octa, osol ji a nech ji do měkká uvařit. Na půl žejdlíka suchých višní nalej žejdlík vína a nech to hodně rozvařit, přilej k tomu trochu polívky, v které se zvěřina vařila, rozmíchej a proceď to, dej k tomu kus cukru, trochu citronové kůry, hřebíčku a skořice, zapraž to žlutou jíškou a nech to povařit. Potom se zvěřina ocedí, zaobalí se do pěkně složeného servítku a dá se na stůl; omáčka dá se zvlášť do nádobky k tomu určené. Místo višní mohou se ve víně uvařit sušené šipky.</p>
 
