--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -188,7 +188,7 @@
 
 <p>Z toho těsta mohou se také dělati tak nazvané růžové koblihy <i>(Rosenkrapfen)</i>, a sice takto: těsto se rozváli, načež se z něho kulatou, okrouhle vrobkovanou formičkou vypichají růžičky, pomažou se v prostřed trochu bílkem, tři se přilepí na sebe, v prostředku se prstem udělá důlek, pak se hodí do rozpáleného přepouštěného másla a nechají se smažit; musí ale být hodně másla, aby plavaly, tak se z toho udělají jako růžinky. Když jsou hezky do zlatova usmaženy, dá se do prostřed každé buď kousek zavařeného rybízu, nebo jedna zavařená višně a posypou se cukrem – tak to na stole pěkně vypadá.</p>
 
-<a name="skoricove-trubicky"><a name="skoricove-trubicky"><h2>Skořicové trubičky</h2></a></a>
+<a name="skoricove-trubicky"><h2>Skořicové trubičky</h2></a>
 
 <p>Rozdrob na vále dva loty čerstvého másla v půl žejdlíku mouky, udělej v tom důlek a zadělej těsto jedním žloutkem, z půl citronu procezenou šťávou a lžíci vody, pak těsto prohnět a tence ho rozválej, načež z něho vykrajuj na dobrý prst široké, a asi šest prstů dlouhé proužky, otoč každý okolo plechové formičky, podobající-se trubce velmi širokého trychtýře a mající nahoře držátko ze silného drátu, obviň každý proužek nití a smaž jeden po druhém ve hluboké nádobce v rozpáleném přepouštěném másle. Když jsou trubičky upečeny, smekni každou s formičky, nitě odviň, trubičky posyp hojně tlučeným cukrem, smíšeným s tlučenou skořicí, a urovnej je na talíř.</p>
 
@@ -236,7 +236,7 @@
 
 <p>Utři čtvrt libry novéna másla, dej do něho čtvrt libry tlučeného cukru, čtvrt libry pěkné mouky, Čtvrt libry strouhaných oloupaných mandlí, trochu tlučené skořice a trochu skrájené citronové kůry, vraz do toho 8 celých vajec, každé dobře zamíchej a tři to nejméně půl hodiny. Potom potři trochu sláninou čtyrhranou formu <i>(Waffentrapfenform)</i>, otři ji, nalej do ní lžicí trochu těsta, formu zlehka stiskni a upeč těsto na ohni po obou stranách jako oplatek, načež hned, jakmile ho z formy vyndáš, otoč ho kolem válečku koncema k sobě, dokud nezkřehne, a tak pokračuj, až jsou všechny upečeny; potom trubičky postav do suchého místa, aby nezvlhly. Než je dáš na stůl, postav je s mísou na chvilenku na kamna, aby opět zkřehly, pak je posyp cukrem. Je to dobré a vydajné pečivo.</p>
 
-<a name="skoricove-trubicky"><a name="skoricove-trubicky"><h2>Skořicové trubičky</h2></a></a>
+<a name="skoricove-trubicky-ii"><h2>Skořicové trubičky II</h2></a>
 
 <p>Vezmi žejdlik mouky, tři čtvrtě žejdlíka dobrého mléka, tlučené skořice a cukru dle zdání, a zadělej to; kdyby to bylo husté, může se přilejt trochu mléka, a také se může přidat jedno celé vejce; načež z toho peč oplatky, jenom ne příliš do červena, ovin každý hned za tepla přes kulaté dřívko jako mandlové trubičky, a dej je na stůl posypané skořicí a cukrem. S těmito trubičkami musí se zacházet tak jako s mandlovými, aby nezvlhly.</p>
 
