--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -50,7 +50,7 @@
 
 <a name="anyzove-kornoutky"><h2>Anýzové kornoutky</h2></a>
 
-<p>Dej na váhu dvě vejce, zvaž tolik tlučeného cukru <b>a </b>za jedno vejce mouky, potom vejce roztluč do hrnku, dej k nim ten cukr i tu mouku, a míchej to půl hodiny; pak pomaž plech voskem, otři jej prozíravým papírem, a nalévej naň lžíci malinké lívanečky vždy hezký kousek od sebe, posyp každý povrchu trochu anýzem (to se musí hodně čerstvě dělat, aby nepřischly) a <b>s</b>trč je do hezky teplé trouby; hned však musíš na ně dohlídnout, aby se nespálily. Když jsou do zlatova upečeny, vytáhni je, každý od plechu nožem odloupni, otoč ho kolem vařečky; hodně ho na sebe přitlač, a tak pokračuj, až jsou všechny; to se však musí všecko velmi spěšně dít, sice se neotočí.</p>
+<p>Dej na váhu dvě vejce, zvaž tolik tlučeného cukru a za jedno vejce mouky, potom vejce roztluč do hrnku, dej k nim ten cukr i tu mouku, a míchej to půl hodiny; pak pomaž plech voskem, otři jej prozíravým papírem, a nalévej naň lžíci malinké lívanečky vždy hezký kousek od sebe, posyp každý povrchu trochu anýzem (to se musí hodně čerstvě dělat, aby nepřischly) a <b>s</b>trč je do hezky teplé trouby; hned však musíš na ně dohlídnout, aby se nespálily. Když jsou do zlatova upečeny, vytáhni je, každý od plechu nožem odloupni, otoč ho kolem vařečky; hodně ho na sebe přitlač, a tak pokračuj, až jsou všechny; to se však musí všecko velmi spěšně dít, sice se neotočí.</p>
 
 <a name="cukrova-zemcatka"><h2>Cukrová zemčátka</h2></a>
 
