--- a/src/dodatek.html
+++ b/src/dodatek.html
@@ -1,6 +1,6 @@
 <a href="index.html" class="hlavicka"><h1>Dodatek</h1></a>
 
-<a name="jak-se-delaji-jaternice,-jelita-a-klobasy"><h2>Jak se dělají jaternice, jelita a klobásy</h2></a>
+<a name="jak-se-delaji-jaternice-jelita-a-klobasy"><h2>Jak se dělají jaternice, jelita a klobásy</h2></a>
 
 <p>Když se doma prasátko zabije, mívá domácí paní hlavní zřetel na jaternice. Obyčejně se bere do domu řezník, aby vepře zabil, jaternice udělal atd. Avšak tento neumí vždycky také i s drobem dobře zacházet, pročež uvedu zde o tom následující pojednání.</p>
 
@@ -14,7 +14,7 @@
 
 <p>Na libru soli vezme se lot salitru a tím se maso, které se dříve nesmí máčet, nasolí, dobře do dřevěné nádoby uloží, prkénkem přikreje a kamenem přimáčkne. Takto nasolené maso musí aspoň čtrnáct dní ležet a častěji se přeložit, aby sůl všude stejně se protáhla, načež se maso dá do komína. Kdo je milovník česneku, může několik stroužků se solí utřít a maso tím natřít. – Také se k uzení nasoluje hovězí i jelení jazyk, a musí osm dní ležet, nežli se dá do komína.</p>
 
-<a name="jak-se-maslo-naklada,-soli-a-prevaruje"><h2>Jak se máslo nakládá, solí a převařuje</h2></a>
+<a name="jak-se-maslo-naklada-soli-a-prevaruje"><h2>Jak se máslo nakládá, solí a převařuje</h2></a>
 
 <p>Nové máslo se ke všem jídlám nehodí, aniž je všude v každém ročním počasí k dostání; protož jest zapotřebí, aby každá hospodyně, kde to může býti, zvláště na zimu slaným a přepouštěným máslem se zaopatřila.</p>
 
@@ -24,7 +24,7 @@
 
 <p>Máslo nové, slané i převařené jest nejlépe vždycky na takových místech schovat, kde jest chladno a sucho, a kde není žádný puch, protože máslo každou chuť rádo přijímá a tím porušení béře a stává se nechutným.</p>
 
-<a name="jak-se-maji-vejce-ukladat,-aby-se-nepokazily"><h2>Jak se mají vejce ukládat, aby se nepokazily</h2></a>
+<a name="jak-se-maji-vejce-ukladat-aby-se-nepokazily"><h2>Jak se mají vejce ukládat, aby se nepokazily</h2></a>
 
 <p>Vejce se nejlépe ukládají, když se do dlouhého prkna nechají udělat samé díry, a do těch se vejce pěkně jedno vedle druhého urovnají, tak aby se jedno druhého nedotýkalo; prkno však musí býti v takovém místě, kam ani teplo ani mráz nemůže, protože by tam vejce zmrzly. Kdo ale takové prkno nemá, může vejce na zimu ukládat buď do hrachu anebo do popele, totiž: dá se vrstva popele, do něho se nastrká vajec tak, aby se jedno druhého nedotýkalo, pak se nasype zase asi na půl čtvrtky popele, do toho se opět nastrkají vejce, a tak se pokračuje dále. Nejdéle se udrží vejce zdravé, když se nakladou v kadečku do hašeného řídkého vápna; v tomto pohrouženy vydržejí třebas rok. Také se mohou vejce v zahoustlém vápně omočit, tak sice, aby skořápku nebylo vidět, pak se nechají oschnout a buď se nastrkají do popele anebo se v chladném místě rozloží.</p>
 
@@ -66,7 +66,7 @@
 
 <p>Když se v hrnku smetana připálí, což se lehce stane, vaří-li se smetana při ohni, tedy se hrnek zevnitř namaže lojovou svíčkou na tom místě, kde je smetana nejvíce připálená, a přistaví se zase k ohni; tak připálenina z většího dílu zmizí. Nebo se vodní konévka namočí ve studené vodě a poklopí se na hrnek, čímž se též, nepříjemná chuť vytáhne. Připálení může se však předejít, když smetanu na plotně vaříme.</p>
 
-<a name="rychly-prostredek,-kdyz-se-kucharka-spali-neb-opari"><h2>Rychlý prostředek, když se kuchařka spálí neb opaří</h2></a>
+<a name="rychly-prostredek-kdyz-se-kucharka-spali-neb-opari"><h2>Rychlý prostředek, když se kuchařka spálí neb opaří</h2></a>
 
 <p>Když se kuchařka spálí neb opaří, bez čeho se snad žádná vařit nenaučí, ať honem vejce roztluče a mázdrou, která jest ve skořápce, spálené neb opařené místo obloži, a když to přischne, nechť to pořád maže bílkem. To vytáhne horkost a neudělá se žádný puchýř; nesmí se ale spálené místo dříve namočit, dokud horkost nezmizela. Také se radí strouhaná zemčátka nebo rychlé obložení bavlnou; co jest nejdříve při ruce, toho ať se použije. Jestli se ale kuchařka silně spálila o plech aneb o železo, tedy jest nejlépe lékaře povolat; není-li však lékař hned po ruce, tedy nechť se rána obkládá v klejtovém octě a ve vodě máčenými klocy, a je-li rána zjitřena, musí se hojit klejtovou masti.</p>
 
