--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -58,7 +58,7 @@
 
 <a name="beefsteak-se-sardelemi"><h2>Beefsteak se sardelemi</h2></a>
 
-<p>Nakrájej řízky ze svíčkové pečené jako v předešlém čísle, naklepej, osol a vhod je do rozpálené mastnoty; nejdéle za deset minut jsou dost; potom je vyndej a polož na každý řízek kousek sardelového másla. Chceš-li je míti ještě úpravnější, tedy udělej tolik sazených vajec, kolik máš řízků, pak těmi vejci hezky oblož, posyp je nakrájenou pažitkou a nes to na stůl.</p>
+<p>Nakrájej řízky ze svíčkové pečené jako v předešlém receptu, naklepej, osol a vhod je do rozpálené mastnoty; nejdéle za deset minut jsou dost; potom je vyndej a polož na každý řízek kousek sardelového másla. Chceš-li je míti ještě úpravnější, tedy udělej tolik sazených vajec, kolik máš řízků, pak těmi vejci hezky oblož, posyp je nakrájenou pažitkou a nes to na stůl.</p>
 
 <a name="karbanatky-ze-svickove-pecene"><h2>Karbanátky ze svíčkové pečeně</h2></a>
 
@@ -94,7 +94,7 @@
 
 <a name="gulas-na-jiny-zpusob"><h2>Gulaš na jiný způsob</h2></a>
 
-<p>Vezmi dvě libry kyprého hovězího masa z kejty, dobře ho naklepej, nařezej z něho na dva prsty široké, na tři prsty dlouhé a na malík tlusté kousky, přemej je v čisté vodě, dej na kuthan na kostky rozkrájený ledvinový lůj nebo slaninu, dvě na drobno rozkrájené cibule, trochu dymiánových lístků, vlož do toho ty řízky, malinko to osol, posyp trochu tlučeným pepřem, dobře to přikrej a nech to dusit; když to počne vysmahovat, podlévej po lžici hovězí polívky, aby se to nepřipálilo. Když jsou řízky dost měkké, dej je buď jenom tak ve šťávě na teplou mísu, vůkol udělej věnec ze smažených zemčátek dle čísla 10. a dej to k večeři na tabuli. Kdo by nebyl milovník cibule a pepře, může oboje vynechat.</p>
+<p>Vezmi dvě libry kyprého hovězího masa z kejty, dobře ho naklepej, nařezej z něho na dva prsty široké, na tři prsty dlouhé a na malík tlusté kousky, přemej je v čisté vodě, dej na kuthan na kostky rozkrájený ledvinový lůj nebo slaninu, dvě na drobno rozkrájené cibule, trochu dymiánových lístků, vlož do toho ty řízky, malinko to osol, posyp trochu tlučeným pepřem, dobře to přikrej a nech to dusit; když to počne vysmahovat, podlévej po lžici hovězí polívky, aby se to nepřipálilo. Když jsou řízky dost měkké, dej je buď jenom tak ve šťávě na teplou mísu, vůkol udělej <a href="#beefsteak-aneb-hovezi-rizky">věnec ze smažených zemčátek</a> a dej to k večeři na tabuli. Kdo by nebyl milovník cibule a pepře, může oboje vynechat.</p>
 
 <p>Nebo když jsou řízky dost měkké, nalej na ně trochu vinného octa, potom tolik hovězí polívky, mnoho-li omáčky je třeba, dej k tomu trochu hnědé jíšky, přilej kyselé husté smetany, dej trochu drobně rozkrájené citronové kůry a nech to trochu povařit; pak to dej na mísu a vůkol udělej věnec ze smažených zemčátek, nebo dej zemčátka zvlášť, anebo udělej věnec z naložených, na koláčky, rozkrájených okurek.</p>
 
