--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -2,7 +2,7 @@
 
 <a name="okurky-ve-vode-nalozene"><h2>Okurky ve vodě naložené</h2></a>
 
-<p>Zdravé prostřední okurky namoč ve studničné vodě, potom vylož dno buď soudku nebo velkého hrnku koprem, vinnými a višňovými listy, na to urovnej okurky jednu vedle druhé, pak dej opět vrstvu kopru a listí, na to zase vrstvu okurek, a tak pokračuj, až je nádoba plná; navrch musí přijít kopr a listí. Zvař studničnou vodu se solí a nech ji vychladnout, potom jí nalej na okurky tolik, aby přes ně přesahovala, navrch polož kulaté prkénko, na toto hezky velký kámen a postav nádobu na vlažné místo. Pokud okurky nezačnou kysat, nesmí se s nimi ani pohnouti, protože by se kysání přetrhlo a okurky by se zkazily; kam nádobu postavíš, tam musí bez pohnutí zůstat stát, až se pěna ztratí a bílá mázdra se utvoří, což asi v osmi nebo desíti dnech se stane; pak sejmi svrchu pokladené listí i s tou mázdrou, prkénko očisti a dej ho zase na okurky, polož na něj malý kámen, jen co by se okurky v láku potopily, a postav nádobu na chladné místo. Takto naložené okurky vydrží dosti dlouho, jsou výborné a mnohem zdravější nežli v octě nakládané. Do octa nakládají se okurky jen tenkrát, když mají celou zimu vydržet, o čemž v následujícím čísle jest pojednáno.</p>
+<p>Zdravé prostřední okurky namoč ve studničné vodě, potom vylož dno buď soudku nebo velkého hrnku koprem, vinnými a višňovými listy, na to urovnej okurky jednu vedle druhé, pak dej opět vrstvu kopru a listí, na to zase vrstvu okurek, a tak pokračuj, až je nádoba plná; navrch musí přijít kopr a listí. Zvař studničnou vodu se solí a nech ji vychladnout, potom jí nalej na okurky tolik, aby přes ně přesahovala, navrch polož kulaté prkénko, na toto hezky velký kámen a postav nádobu na vlažné místo. Pokud okurky nezačnou kysat, nesmí se s nimi ani pohnouti, protože by se kysání přetrhlo a okurky by se zkazily; kam nádobu postavíš, tam musí bez pohnutí zůstat stát, až se pěna ztratí a bílá mázdra se utvoří, což asi v osmi nebo desíti dnech se stane; pak sejmi svrchu pokladené listí i s tou mázdrou, prkénko očisti a dej ho zase na okurky, polož na něj malý kámen, jen co by se okurky v láku potopily, a postav nádobu na chladné místo. Takto naložené okurky vydrží dosti dlouho, jsou výborné a mnohem zdravější nežli v octě nakládané. Do octa nakládají se okurky jen tenkrát, když mají celou zimu vydržet, o čemž v následujícím receptu jest pojednáno.</p>
 
 <a name="okurky-v-octe-nalozene"><h2>Okurky v octě naložené</h2></a>
 
@@ -26,11 +26,11 @@
 
 <a name="nalozene-hribky"><h2>Naložené hříbky</h2></a>
 
-<p>Vyber samé malinké hříbky, kořínky ulom, hlavičky vyper a dej je do hrnku se solí, octem a celým pepřem vařit, pak je odstav a nech je do druhého dne; druhý den vyndej houby lžičkou do parních sklenic, zvař opět čerstvý ocet se solí, bobkovým listím a pepřem, nalej ho na houby a dále pokračuj tak jak v předešlém čísle udáno. – Tak se také žampiony nakládají.</p>
+<p>Vyber samé malinké hříbky, kořínky ulom, hlavičky vyper a dej je do hrnku se solí, octem a celým pepřem vařit, pak je odstav a nech je do druhého dne; druhý den vyndej houby lžičkou do parních sklenic, zvař opět čerstvý ocet se solí, bobkovým listím a pepřem, nalej ho na houby a dále pokračuj tak jak v předešlém receptu udáno. – Tak se také žampiony nakládají.</p>
 
 <a name="nalozene-bobove-lusky"><h2>Naložené bobové lusky</h2></a>
 
-<p>Vezmi mladé jemné bobové lustičky, ořež stopky<b>, </b>stáhni s každé lustičky nitku se hřbetu a dej je do studené vody. Nech na rendlíku vařit vodu se solí, vlož lusky do ní a nech je jenom několik minut povařit, pak je vyndej na čistý ubrousek a nech je oschnout. Zatím zvař ocet se solí a pepřem, je-li lustiček mnoho, dej je do hrnku, nalej na ně ten zvařený a vychladlý ocet, hrnek obvaz hodně tlustým papírem a postav ho do chladného místa; máš-li však jen málo lusek, tedy je můžeš dát do sklenic a vařit je v páře, jak v předešlých číslech jest udáno.</p>
+<p>Vezmi mladé jemné bobové lustičky, ořež stopky<b>, </b>stáhni s každé lustičky nitku se hřbetu a dej je do studené vody. Nech na rendlíku vařit vodu se solí, vlož lusky do ní a nech je jenom několik minut povařit, pak je vyndej na čistý ubrousek a nech je oschnout. Zatím zvař ocet se solí a pepřem, je-li lustiček mnoho, dej je do hrnku, nalej na ně ten zvařený a vychladlý ocet, hrnek obvaz hodně tlustým papírem a postav ho do chladného místa; máš-li však jen málo lusek, tedy je můžeš dát do sklenic a vařit je v páře, jak v předešlých receptech jest udáno.</p>
 
 <a name="nalozena-cervena-repa"><h2>Naložená červená řepa</h2></a>
 
