--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -104,7 +104,7 @@
 
 <a name="horcice"><h2>Hořčice</h2></a>
 
-<p>Na čtvrt libry hořčicové mouky nech svařit dva žejdlíky dobrého vinného octa <b>s </b>několika hřebíčky, citronovou kůrou a kouskem květu, pak dej hořčici na mísu a nalej na ni za ustavičného míchání ten vařící ocet, musíš však hodně míchat, aby se nenadělaly žmolky; když to vychladne, nalej to do flašky a ulož na chladném místě. Edo chce, může při vaření do toho dát kus cukru.</p>
+<p>Na čtvrt libry hořčicové mouky nech svařit dva žejdlíky dobrého vinného octa s několika hřebíčky, citronovou kůrou a kouskem květu, pak dej hořčici na mísu a nalej na ni za ustavičného míchání ten vařící ocet, musíš však hodně míchat, aby se nenadělaly žmolky; když to vychladne, nalej to do flašky a ulož na chladném místě. Edo chce, může při vaření do toho dát kus cukru.</p>
 
 <a name="kysely-rosol"><h2>Kyselý rosol</h2></a>
 
