--- a/src/pecene.html
+++ b/src/pecene.html
@@ -12,7 +12,7 @@
 
 <p>Telecí kejta nechá se jako předešle uležet, pak se sklepá, nechá se ve vodě močit, a když jest přemytá a nasolená, tedy do ní ostrým nožem napíchej hluboké díry a do těchto nastrkej na malík tlustě nakrájenou čerstvou slaninu, ostatně při pečení zacházej jako s&nbsp;předešlou; jest mnohem chutnější.</p>
 
-<a name="teleci-kejta-vyslanena,-s-vinem"><h2>Telecí kejta vyslaněná, s vínem</h2></a>
+<a name="teleci-kejta-vyslanena-s-vinem"><h2>Telecí kejta vyslaněná, s vínem</h2></a>
 
 <p>Telecí kejtu nech taktéž několik dni ve studenu ležet, aby zkřehla, potom ji sklepej, ořež s ní všecky kůžičky jako se zvěřinní kejty a jako tuto čtyřmi nebo šesti řadami slaninou ji hojně prošpikuj; načež polož na pekáč dvě vařečky nebo loučky, poklaď je máslem, vlož kejtu na ně, pohlaď ji povrchu kouskami másla, podlej pod ní půl žejdlíka vody a nech ji pect; když jest asi na polovic pečená, podlej pod ní půl žejdlíka vína, a nech ji dále pect, až začíná červenat; nyní nech v hrnečku rozpustit kousek másla, vmíchej do něho kávovou lžičku pěkné mouky, vlej do toho půl žejdlíka husté kyselé smetany a dobře to rozmíchej; načež obrať pečeni vrchní stranou vzhůru, tak jak přijde na tabuli, polej ji lžicí tou smetanou, nech ji opect, pak ji opět polej, a tak pokračuj, až smetana mezi pečením všecka vsákne; potom pokrop kejtu ještě rozpuštěným čerstvým máslem a nech ji do tmavozlatova upect; takto se utvoří povrchu pěkná kůrčička; nyní dej pečeni na mísu a podlej ji omáčkou. – Na takto upravené pečeni zajisté každý jak náleží si pochutná. V nedostatku kyselé smetany může se sladká uvařit a nechat vystydnout, pak se ní péčeně polévá. Je-li kejta malá, tedy se dá méně vody, vína i smetany.</p>
 
@@ -48,7 +48,7 @@
 
 <a name="veprova-kejta-nalozena"><h2>Vepřová kejta naložená</h2></a>
 
-<p>S Vepřové kejty sejmi kůži i sádlo, kejtu omej, nasol a vlož ji do hluboké nádoby. Dej do žejdlíka octa a žejdlíka vody jednu nakrájenou cibuli, několik bobkových listů, trochu dymiánu, kousek zázvoru, 20 zrnek pepře a nového koření, osol to, nech to zvařit a pak vystydnout, načež tím kejtu polej a nech ji v tom tři dni ležet, musíš ji ale každý den obrátit; potom ji dej na pekáč, proceď na ni trochu toho moku a nech ji pect, přičemž ji šťávou častěji polévej; když se již dopeká, rozmíchej v hrnečku vařečku mouky s trochou dobré chladné smetany, prilej to do omáčky ku kejtě a nech to ještě zahoustnout; pak kejtu vyndej na mísu <b>a </b>polej ji omáčkou.</p>
+<p>S Vepřové kejty sejmi kůži i sádlo, kejtu omej, nasol a vlož ji do hluboké nádoby. Dej do žejdlíka octa a žejdlíka vody jednu nakrájenou cibuli, několik bobkových listů, trochu dymiánu, kousek zázvoru, 20 zrnek pepře a nového koření, osol to, nech to zvařit a pak vystydnout, načež tím kejtu polej a nech ji v tom tři dni ležet, musíš ji ale každý den obrátit; potom ji dej na pekáč, proceď na ni trochu toho moku a nech ji pect, přičemž ji šťávou častěji polévej; když se již dopeká, rozmíchej v hrnečku vařečku mouky s trochou dobré chladné smetany, prilej to do omáčky ku kejtě a nech to ještě zahoustnout; pak kejtu vyndej na mísu a polej ji omáčkou.</p>
 
 <a name="veprova-ledvina"><h2>Vepřová ledvina</h2></a>
 
