--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -4,7 +4,7 @@
 
 <a name="teleci-mozek"><h2>Telecí mozek</h2></a>
 
-<p>Nech telecí mozek chvíli stát ve studené vodě, aby zbělel, pak na něj nalej horkou vodu, stáhni s něho všechny kůžičky a vlož ho na rendlík, jehož dno tenkými lístky z cibule a slaniny pokladeno být musí, dej k tomu několik zrnek pepře, trochu soli, přikrej to poklicí a nech to dusit, chvílemi však přilévej po troškách hovězí polívky, aby mozeček nepřilehl; potom ho vyndej celý a polož ho na máslem vymazanou misku. Zatím dej na rendlíček rozpustit kousek másla, vmíchej do něho asi tři vařečky mouky a tolik valícího mléka, až se udělá hezky hustá omáčka, a míchej ní stále, až se táhne a leskne, potom ji vlej do hrnečku, zakverluj do ni dva syrové žloutky a polej tím všude stejně ten mozek, posyp ho strouhanou smaženou žemličkou, pokrop ještě rozpuštěným máslem a postav ho do trouby; když dostane patřičnou barvu, přilej pod něj trochu polívkového rosolu čís, 54 (str. 25) a nes ho na stůl.</p>
+<p>Nech telecí mozek chvíli stát ve studené vodě, aby zbělel, pak na něj nalej horkou vodu, stáhni s něho všechny kůžičky a vlož ho na rendlík, jehož dno tenkými lístky z cibule a slaniny pokladeno být musí, dej k tomu několik zrnek pepře, trochu soli, přikrej to poklicí a nech to dusit, chvílemi však přilévej po troškách hovězí polívky, aby mozeček nepřilehl; potom ho vyndej celý a polož ho na máslem vymazanou misku. Zatím dej na rendlíček rozpustit kousek másla, vmíchej do něho asi tři vařečky mouky a tolik valícího mléka, až se udělá hezky hustá omáčka, a míchej ní stále, až se táhne a leskne, potom ji vlej do hrnečku, zakverluj do ni dva syrové žloutky a polej tím všude stejně ten mozek, posyp ho strouhanou smaženou žemličkou, pokrop ještě rozpuštěným máslem a postav ho do trouby; když dostane patřičnou barvu, přilej pod něj trochu <a href="polivky-masite.html#rosol-polivkovy">polívkového rosolu</a> a nes ho na stůl.</p>
 
 <a name="teleci-mozek-na-jiny-zpusob"><h2>Telecí mozek na jiný způsob</h2></a>
 
@@ -26,7 +26,7 @@
 
 <a name="zavitky-s-michaninkou"><h2>Závitky s míchaninkou</h2></a>
 
-<p>Udělej z půl žejdlíka smetany dle popisu v předešlých číslech hustou kaši a nech ji vystydnout. Dej na rendlík kus másla, drobně rozkrájenou cibuli, vlož na to kus telecího masa a nech ho do měkká udusit; pak maso vyndej a na drobno usekej, taktéž čtyry na tvrdo uvařené vejce a tři očištěné sardele, načež všecko vmíchej do té vychladlé kaše; nyní nastřihej z oplatku čtyrhrané kousky, dej na každý kousek trochu té míchaniny, zaviň je, omoč nejprve v rozkloktaném vejci, pak je obal ve strouhané žemličce a usmaž je do zlatová buď v převařeném másle nebo sádle; potom závitky urovnej na misku, okrášli je citronovými koláčky a zelenou petruželkou, a nes je na stůl.</p>
+<p>Udělej z půl žejdlíka smetany dle popisu v předešlých receptech hustou kaši a nech ji vystydnout. Dej na rendlík kus másla, drobně rozkrájenou cibuli, vlož na to kus telecího masa a nech ho do měkká udusit; pak maso vyndej a na drobno usekej, taktéž čtyry na tvrdo uvařené vejce a tři očištěné sardele, načež všecko vmíchej do té vychladlé kaše; nyní nastřihej z oplatku čtyrhrané kousky, dej na každý kousek trochu té míchaniny, zaviň je, omoč nejprve v rozkloktaném vejci, pak je obal ve strouhané žemličce a usmaž je do zlatová buď v převařeném másle nebo sádle; potom závitky urovnej na misku, okrášli je citronovými koláčky a zelenou petruželkou, a nes je na stůl.</p>
 
 <a name="teleci-rizky-se-sardelemi"><h2>Telecí řízky se sardelemi</h2></a>
 
