--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -28,7 +28,7 @@
 
 <a name="smazeny-teleci-mozek"><h2>Smažený telecí mozek</h2></a>
 
-<p>Telecí mozek omej dříve ve studené a potom v teplé vodě, kůžičky opatrně stáhni, aby mozek se nerozbryndal, každou polovici rozděl na tři nebo čtyry kousky, vlož ho na misku a osol<b>, </b>každý kousek obal v mouce, omoč <b>v </b>rozkloktaném vejci, obal ve strouhané žemličce a usmaž v rozpáleném přepouštěném másle.</p>
+<p>Telecí mozek omej dříve ve studené a potom v teplé vodě, kůžičky opatrně stáhni, aby mozek se nerozbryndal, každou polovici rozděl na tři nebo čtyry kousky, vlož ho na misku a osol<b>, </b>každý kousek obal v mouce, omoč v rozkloktaném vejci, obal ve strouhané žemličce a usmaž v rozpáleném přepouštěném másle.</p>
 
 <a name="svitecky-z-teleciho-mozku"><h2>Svítečky z telecího mozku</h2></a>
 
@@ -64,7 +64,7 @@
 
 <a name="fasirovane-karbanatky"><h2>Fašírované karbanátky</h2></a>
 
-<p>Rozklepej karbanátky hodně tence a široce; nech drobně nakrájenou cibulku na másle spěnit, dej do ní asi půl libry ode všech žilek očištěných, drobně usekaných jater, čtyry loty drobně rozkrájené čerstvé slaniny, trochu pepře, osol to a nech to dusit, pak tím pomaž každý kabanátek uprostřed na stéblo tlustě, okolní maso na to shrň a pěkně urovnej, načež karbanátky oba v mouce, omoč v rozšlehaném na talíři vejci, posyp hojně strouhanou žemličkou a usmaž je na mělkém kastrolu <b>v </b>rozpáleném přepouštěném másle.</p>
+<p>Rozklepej karbanátky hodně tence a široce; nech drobně nakrájenou cibulku na másle spěnit, dej do ní asi půl libry ode všech žilek očištěných, drobně usekaných jater, čtyry loty drobně rozkrájené čerstvé slaniny, trochu pepře, osol to a nech to dusit, pak tím pomaž každý kabanátek uprostřed na stéblo tlustě, okolní maso na to shrň a pěkně urovnej, načež karbanátky oba v mouce, omoč v rozšlehaném na talíři vejci, posyp hojně strouhanou žemličkou a usmaž je na mělkém kastrolu v rozpáleném přepouštěném másle.</p>
 
 <a name="jine-fasirovane-karbanatky"><h2>Jiné fašírované karbanátky</h2></a>
 
@@ -104,11 +104,11 @@
 
 <a name="jehneci-kotletky"><h2>Jehněčí kotletky</h2></a>
 
-<p>Nakrájej <b>z </b>jehněčího ledvinového kusu masa malé kotletky, kůstky seškrab do čistá jako u telecích až k masu, kotletky obráceným nožem hodně rozklepej, pak je shrň opět ouhledně dohromady, vezmi každý za kůstku, omoč ho v rozpuštěném másle, obal ve strouhané žemličce a smaž je do zlatová v rozpáleném převařeném másle. Může se jich použiti ku špenátu nebo i k jiné zelenině.</p>
+<p>Nakrájej z jehněčího ledvinového kusu masa malé kotletky, kůstky seškrab do čistá jako u telecích až k masu, kotletky obráceným nožem hodně rozklepej, pak je shrň opět ouhledně dohromady, vezmi každý za kůstku, omoč ho v rozpuštěném másle, obal ve strouhané žemličce a smaž je do zlatová v rozpáleném převařeném másle. Může se jich použiti ku špenátu nebo i k jiné zelenině.</p>
 
 <a name="jehneci-kotletky-nadivane"><h2>Jehněčí kotletky nadívané</h2></a>
 
-<p>Rozklepej hodně obráceným nožem jako v předešlém čísle nařezané karbanátky, popraš je malinko solí a nech je na prkénku ležet Zatím uvař čtyry loty vyprané a spařené rejže v tučné hovězí polívce do hustá, pak ji vyndej na misku, rozmíchej a nech ji stát. Nech spěnit na másle půl drobně nakrájené cibulky, dej k ni půl telecího mozečku, trochu sekané zelené petružele, trochu tlučeného pepře, vraz do toho jedno celé vejce, a míchej tím, až je to husté, pak to dej k té rejži, jakož i čtvrt libry na drobno usekaného uzeného masa, osol to a přimíchej k tomu ježte trochu strouhané žemličky; nyní dej do prostřed každé kotletky kousek té nádivky, okolní rozklepané maso na to shrň a přimáčkni, načež kotletky posyp trochu moukou, omoč je v rozmíchaném vejci, obal ve strouhané žemličce a usmaž je v rozpáleném másle.</p>
+<p>Rozklepej hodně obráceným nožem jako v předešlém receptu nařezané karbanátky, popraš je malinko solí a nech je na prkénku ležet Zatím uvař čtyry loty vyprané a spařené rejže v tučné hovězí polívce do hustá, pak ji vyndej na misku, rozmíchej a nech ji stát. Nech spěnit na másle půl drobně nakrájené cibulky, dej k ni půl telecího mozečku, trochu sekané zelené petružele, trochu tlučeného pepře, vraz do toho jedno celé vejce, a míchej tím, až je to husté, pak to dej k té rejži, jakož i čtvrt libry na drobno usekaného uzeného masa, osol to a přimíchej k tomu ježte trochu strouhané žemličky; nyní dej do prostřed každé kotletky kousek té nádivky, okolní rozklepané maso na to shrň a přimáčkni, načež kotletky posyp trochu moukou, omoč je v rozmíchaném vejci, obal ve strouhané žemličce a usmaž je v rozpáleném másle.</p>
 
 <a name="veprove-kotletky"><h2>Vepřové kotletky</h2></a>
 
@@ -120,5 +120,5 @@
 
 <a name="klobasa"><h2>Klobása</h2></a>
 
-<p>Usekej na drobno mnoho-li chceš vepřového masa, osol ho, na libru masa přidej s půl citronu nakrájenou kůru a půl <b>v </b>pivě namočené žemličky, promíchej to dobře, dej to do stříkačky čili nabijáku a nadívej dobře vypraná skopová střívka.</p>
+<p>Usekej na drobno mnoho-li chceš vepřového masa, osol ho, na libru masa přidej s půl citronu nakrájenou kůru a půl v pivě namočené žemličky, promíchej to dobře, dej to do stříkačky čili nabijáku a nadívej dobře vypraná skopová střívka.</p>
 
